syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc.proto";

enum TipoConta {
  CORRENTE = 0;
  POUPANCA = 1;
}

message ContaClienteDTO {
  int64 id = 1;
  int64 cliente_id = 2;
  double saldo = 3;
  int32 banco = 4;
  string numeroConta = 5;
  string digito = 6;
  int32 tipoConta = 7;
}

message ContaRequest {
  int64 idCliente = 1;
}

message ResponseContas {
  repeated ContaClienteDTO contasClientes = 1;
}

service ContaClienteService {
  rpc cadastrarConta(ContaClienteDTO) returns (ContaClienteDTO);
  rpc obterContaCliente(ContaRequest) returns (ContaClienteDTO);
  rpc obterContasCliente(ContaRequest) returns (ResponseContas);
}


